--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "webrtc",
-  "version": "1.0.0",
-  "description": "Webrtc demo using temasys sdks",
-  "main": "index.js",
+  "name": "webrtc-demo",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-scripts": "1.1.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ishannaithani/webrtc.git"
-  },
-  "author": "Ishan Naithani",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ishannaithani/webrtc/issues"
-  },
-  "homepage": "https://github.com/ishannaithani/webrtc#readme"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
