--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "load-script": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "skylinkjs": "git://github.com/Temasys/SkylinkJS.git#0.6.30"
   },
   "scripts": {
     "start": "react-scripts start",
